<?xml version="1.0"?>
<package format="3">
  <name>my_robot_description</name>
  <version>0.0.0</version>
  <description>My robot description package</description>
  <maintainer email="your_email@example.com">naraphon9</maintainer>
  <license>Apache-2.0</license>

  <!-- ใช้ build tool ของ Python -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ถ้ามีการใช้ launch -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

