<?xml version="1.0"?>
<package format="3">
  <name>ydlidar_old</name>
  <version>0.0.1</version>
  <description>YDLidar ROS2 package</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
